# meadowland

./: Cargo.toml
assets/biomes/: biomes.json  details.biomes.json
assets/buildings/: _schema.json
assets/resources/: wood.resource.json
schemas/: light.json
src/: bundles.rs  components.rs  main.rs  plugins.rs  resources.rs  systems.rs
src/bundles/: pawn_bundle.rs  plant_bundle.rs
src/components/: entity_selected.rs  entity_selected_actions.rs  nickname.rs  pawn.rs  plant.rs  plant_harvest.rs  visual_aabb2d.rs
src/plugins/: game_world_plugin.rs
src/resources/: biomes.rs  game_resources.rs  jobs.rs
src/systems/: map_generation.rs  ui.rs
