[package]
name = "meadowland"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy-inspector-egui = "0.27.0"
bevy_common_assets = { version = "0.11.0", features = ["json"] }
bevy_ecs_tilemap = "0.14.0"
bevy_egui = "0.30.0"
bevy_framepace = "0.17.1"
bevy_mod_picking = "0.20.1"
bevy_prototype_lyon = "0.12.0"
rand = "0.8.5"
serde = "1.0.214"
serde_json = "1.0.132"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
